front-end and added js to buttons

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <body>
         <div class="container">
             <div class="calculator">
-                <div class="display">
-                    <h1>1,294</h1>
-                </div>
+                <h1 id="display" class="display"></h1>
                 <div id="buttons" class="buttons"></div>
                 <div class="footer">
                     <p>graphic design is my passion</p>
