--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
             <div class="calculator">
-                <h1 id="display" class="display"></h1>
+                <h1 id="display" class="display">0</h1>
                 <div id="buttons" class="buttons"></div>
                 <div class="footer">
                     <p>graphic design is my passion</p>
